# fraud-serve-bench

./: .gitignore  config.yaml  main.py  pyproject.toml
artifacts/: metadata.json  model.onnx
bench/: bench.py  pyproject.toml
model/: config.py  config.yaml  pyproject.toml  train.py
serve-python/: main.py  pyproject.toml
serve-python/app/: main.py  schema.py
serve-rust/: Cargo.toml
serve-rust/src/: main.rs
src/: config.py
