[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "skl2onnx>=1.20.0",
]
